# trustmeagent

./: .gitignore  README.md  pyproject.toml
docs/: design.md  roadmap.md
examples/: verification.patch
tests/: __init__.py  git_helpers.py  test_artifacts.py  test_build_check.py  test_claude.py  test_cli.py  test_core_file_risk.py  test_detectors.py  test_diff_scope.py  test_harness.py  test_lockfile_drift.py  test_paths.py  test_subprocess.py  test_tui.py
trust_me/: artifacts.py  cli.py  harness.py
trust_me/detectors/: build_check.py  core_file_risk.py  diff_scope_check.py  import_check.py  lint_check.py  lockfile_drift_check.py  review_summary_check.py  test_check.py  type_check.py
trust_me/models/: finding.py  report.py
trust_me/render/: html_report.py  json_report.py  text_report.py  tui.py
trust_me/utils/: claude.py  diff.py  git.py  paths.py  subprocess.py  tool_env.py
