[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-me"
version = "0.1.0"
description = "Harness-first reliability checker for AI-generated code patches"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
]

[project.scripts]
trust-me = "trust_me.cli:main"

[tool.setuptools.packages.find]
include = ["trust_me*"]
